[build-system]
requires = ["hatchling", "numpy", "scipy", "matplotlib", "torch", "torchvision", "pandas", "torch_lr_finder"]
build-backend = "hatchling.build"

[project]
license = "MIT"
name = "vaesimca"
version = "0.4.2"
authors = [
  { name="Sergey Kucheryavskiy", email="svkucheryavski@gmail.com" },
]
description = "Implementation of VAE-SIMCA one class classification method"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/svkucheryavski/vaesimca"
"Bug Tracker" = "https://github.com/svkucheryavski/pcv/vaesimca"

[tool.setuptools]
license-files = []